fix scroll issues and overflow

--- a/src/style.css
+++ b/src/style.css
@@ -246,6 +246,13 @@ main{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 82vw;
+}
+
+.project-title-container{
+    display: flex;
+    justify-content: center;
+    margin-left: 2%;
 }
 
 .project-title-container .header-top{
@@ -297,10 +304,17 @@ main{
 }
 
 .to-do-list{
-    padding: 1%;
+    padding-top: 2%;
+    padding-bottom: 5%;  
+    padding-left: 1%;  
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
+    max-height: 70vh;
+    overflow-y: scroll;
+    margin-right: -2.5%;
+    overflow-x: hidden;
+    margin-left: -1%;
 }
 
 dialog{
@@ -413,7 +427,7 @@ form button:active, #add-new-project:active{
 }
 
 .task:hover{
-    transform: translateY(-6px) scale(1.05);
+    transform: translateY(-6px) scale(1.02);
     box-shadow: 0 12px 0 #d96aa8;
 }
 
